# tifa.me

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  Make.defs  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  py.yml  pypi-publish.yml
examples/slack-reminder/: README.md  timeoff-reminder.py
src/timeoff/: __init__.py  api.py  commands.py  config.py  exceptions.py  models.py  prompt.py  prompts.py  schedules.py  update.py  util.py
src/timeoff/model/: base.py  entry.py  policy.py  schedule.py  setting.py
src/timeoff/object/: base.py  entry.py  policy.py  schedule.py
tests/: test_prompt.py  test_util.py
